# riot-rs

./: .gitignore  Cargo.toml  EndpointTasks.md  LICENSE  README.md
.github/workflows/: rust.yml
models-build/: Cargo.toml
models-build/src/: main.rs
src/: lib.rs
src/endpoints/: account_v1.rs  champion_mastery_v4.rs  champion_v3.rs  clash_v1.rs  league_exp_v4.rs  league_v4.rs  lol_challenges_v1.rs  lol_status_v4.rs  match_v5.rs  mod.rs  spectator_v4.rs  summoner_v4.rs  tournament_stub_v5.rs  tournament_v5.rs
src/models/: account.rs  active_shard.rs  mod.rs
src/models/clash/: player.rs  team.rs  tournament.rs
src/models/client/: client.rs  client_builder.rs  configuration.rs  error.rs  mod.rs
src/models/lcu/: account_verification.rs  active_boosts.rs  anti_addiction.rs  banners.rs  career_stats.rs  catalog.rs  client_config.rs  entitlements_token.rs  mod.rs
src/models/lcu_connector/: lcu_connector.rs  lcu_connector_info.rs  mod.rs
src/models/league/: challenge_config.rs  champion_info.rs  champion_mastery.rs  current_game_info.rs  featured_game_info.rs  league_entry.rs  league_list.rs  mod.rs  platform_data.rs  summoner.rs
src/models/league/clash/: mod.rs  team.rs
src/models/league/lol_match/: info.rs  lol_match.rs  mod.rs  participant.rs  participant_challenge.rs  perks.rs  team.rs  timeline.rs  timeline_frame_event.rs  timeline_info.rs  timeline_participant.rs
src/models/league/tournament/: lobby_event.rs  mod.rs  provider_registration_params.rs  tournament_update_params.rs
src/models/routing/: mod.rs  platform_routing.rs  region_routing.rs
src/models/tournament/: lobby_event.rs  provider_registration_params.rs  tournament_code.rs  tournament_code_params.rs  tournament_game.rs  tournament_params.rs  tournament_update_params.rs
