[package]
name = "riot-api"
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "A rust crate to interact with Riot Games Developer API"
readme = "README.md"

[dependencies]
log = "0.4.20"
chrono = "0.4.31"
reqwest-middleware = "0.2.4"
reqwest-retry = "0.3.0"

[dependencies.serde]
version = "1.0.193"
features = ["derive"]

[dependencies.reqwest]
version = "0.11.22"
features = ["json", "serde_json"]

[dev-dependencies]
reqwest = "0.11.22"
dotenv = "0.15.0"
pretty_env_logger = "0.5.0"

[dev-dependencies.tokio]
version = "1.34.0"
features = ["full"]

[features]
default = ["lol"]
test = ["lol", "clash", "tournament", "tft", "val"]
lol = []
clash = []
tournament = []
tft = []
val = []