[package]
name = "riot-api"
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "A rust crate to interact with Riot Games Developer API"
readme = "README.md"

[dependencies]
log = "0.4.20"
chrono = "0.4.31"
reqwest-middleware = "0.2.4"
reqwest-retry = "0.3.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_yaml = "0.9.31"
reqwest = { version = "0.11.23", features = ["json", "serde_json"] }
regex = "1.10.3"
simple-home-dir = { version = "0.3.2", optional = true }

[target.'cfg(windows)'.dependencies.windows]
version = "0.52.0"
optional = true
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_UI_Shell",
    "Win32_System_Kernel",
    "Wdk_System_Threading",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
]

[dev-dependencies]
dotenv = "0.15.0"
tokio = { version = "1.35.1", features = ["full"] }

[features]
default = ["lol"]
lol = []
clash = []
tournament = []
tft = []
val = []
lcu = ["windows", "simple-home-dir"]