[package]
name = "models-build"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oas3 = "0.4.0"
openapi = "0.1.5"
syn = { version = "2.0.48", features = ["full"] }
prettyplease = "0.2.16"
convert_case = "0.6.0"
